<resources>
    <string name="app_name">UTM Programari</string>
    <string name="logo">Logo</string>
    <string name="login_signup_label">
        <u>or Sign Up</u>
    </string>
    <string name="register_signin_label">
        <u>Already have an account</u>
    </string>
    <string name="main_activity">Your Main App</string>
    <string name="splash_logo">Your App Logo</string>
    <string name="splash_description">Servicii pentru studenti!</string>
    <string name="slider_1">Report</string>
    <string name="slider_2">Prevent</string>
    <string name="slider_3">Servicii pentru studenti UTM</string>
    <string name="slider_description">This is Sample Descriptions for the Slider</string>
    <string name="slider_next">NEXT</string>
    <string name="slider_skip">SKIP</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_into_your_account">Sign into your account</string>
    <string name="welcome">Welcome</string>
    <string name="password">Password</string>
    <string name="select_a_date">Select a date</string>
    <string name="address">Address:</string>
    <string name="description">Description:</string>
    <string name="title">Title</string>
    <string name="send">Send</string>
    <string name="email">Email</string>
    <string name="prenume">Prenume</string>
    <string name="nume">Nume</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="select_image_source">Select image source</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="canada">Canada</string>
    <string name="fire">Fire</string>
    <string name="open">Nav</string>
    <string name="close">Bar</string>
    <string name="incident_label_title">Title</string>
    <string name="incident_label_description">Description</string>
    <string name="incident_min">2 min Ago</string>
    <string name="btn_adress">Address</string>
    <string name="btn_date">Select a Date</string>
    <string name="btn_send">Send</string>
    <string name="incident_title">Title</string>
    <string name="incident_description">Description</string>
    <string name="home">Home</string>
    <string name="add_incident">Add an incident</string>
    <string name="my_account">My Account</string>
    <string name="view_list_incident">View List Incident</string>
    <string name="log_out">Log Out</string>
    <string name="incident_coordinates">Coordinates</string>
    <string name="title_activity_maps_report_incident">Map</string>
    <string name="etTitle">Set Title</string>
    <string name="etDescription">Set Description</string>
    <string name="setAddress">Set Address</string>
    <string name="setDate">Set Date</string>
    <string name="coordinates">Coordinates</string>
    <string name="current_marker_address">Current Marker Address</string>
    <string name="done">Done</string>
    <string name="sala">Sala de forta</string>
    <string name="camin">Camin</string>
    <string name="select_date">SELECT DATE</string>
    <string name="select_time">SELECT TIME</string>
    <string name="cazare_camin">Cazare Camin</string>
    <string name="sala_forta">Sala Forta</string>
    <string name="activitati_extracuriculare">Activitati Extracuriculare</string>
    <string name="mail_box">Mail Box</string>
</resources>
